2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/*.c, gdk/gdkdisplaymanager.c: s/G-OBJECT/G_OBJECT/g, 
	and some more build fixes.

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_enable_model_drag_source) 
	(gtk_tree_view_enable_model_drag_dest): Pass the target list 
	to the underlying dnd implementation, otherwise we miss the 
	target info in the drag-data-received signal.  (#164085, Jorn
	Baayen)

	* gtk/*.c, gdk/gdkdisplaymanager.c: Use canonical property
	names for g_object_notify() calls.  (#171746, Morten Welinder)
	  
2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Allow
	resetting search-column to -1, and document it.  (#172891,
	Lorenzo Gil Sanchez)

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column) 
	(gtk_tree_view_bin_expose): Avoid a few unnecessary calls
	to gdk_window_get_pointer(). (#168015, Billy Biggs)

	* gtk/gtkwindow.c (gtk_window_set_keep_below): Fix the EWMH link,
	noticed by Kristof Vansant.

	* po/.cvsignore, po-properties/.cvsignore: Remove
	Makefile.in.in.  (#171092, Stefan Kasal)

2005-04-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrc.c (gtk_rc_parse_style): Don't modify scanner->value,
	copy it first.  (#165693, Tommi Komulainen)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_grab_focus): 
	* gtk/gtkcombobox.c (gtk_combo_box_grab_focus): Implement
	grab_focus for GtkComboBox and GtkComboBoxEntry.  (#171912,
	Gustavo Carneiro)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c: Store icon caches along with the
	mtimes of the toplevel directories. The previous
	mechanism of a hashtable-per-theme caused duplicate icon
	caches for the same toplevel directory to be created.  
	(#170030)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaboutdialog.c (gtk_about_dialog_init): Protect